--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/42078eb279.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="dist/output.css">
     <title>Funciones y Propiedades Basicas </title>
 </head>
@@ -15,6 +16,12 @@
         <h1 class="h1">Consulta tu prestamo</h1>
         <h2 class="h2">Comparador</h2>
     </div>
+    <button class="switch" id="switch">
+
+        <span><i class="fa-solid fa-sun"></i></span>
+        <span><i class="fa-solid fa-moon"></i></span>
+
+    </button>
 
 
     <section class="section">
